- przeprojektowanie MainWindow - dodanie migracji - przerobienie logowania, rejestracji i dodanie zabezpieczenia z SALT

--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -4,11 +4,194 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctrl="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     xmlns:local="clr-namespace:BadanieKrwi"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
-    Width="800"
-    Height="450"
+    xmlns:vm="clr-namespace:BadanieKrwi.ViewModels"
+    x:Name="mainWindow"
+    Title="Badani Krwi"
+    Width="600"
+    Height="520"
+    dialog:DialogParticipation.Register="{Binding}"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid />
+    <ctrl:MetroWindow.DataContext>
+        <vm:MainWindowViewModel />
+    </ctrl:MetroWindow.DataContext>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <TextBlock
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            FontSize="24"
+            FontWeight="Bold"
+            Text="{Binding TekstEtykietyOkna}" />
+
+        <Image
+            Grid.Row="2"
+            Width="220"
+            Height="220"
+            Margin="3"
+            VerticalAlignment="Center"
+            Source="/Files/Images/BadanieKrwi-Logo.png"
+            Stretch="Uniform" />
+
+        <Separator Grid.Row="1" Grid.ColumnSpan="2" />
+
+        <Grid
+            x:Name="gridLogowania"
+            Grid.Row="2"
+            Grid.Column="1"
+            VerticalAlignment="Center"
+            Visibility="{Binding PokazGridLogowania, UpdateSourceTrigger=PropertyChanged}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="E-mail" />
+            <TextBox
+                Grid.Row="1"
+                ctrl:TextBoxHelper.ClearTextButton="True"
+                ctrl:TextBoxHelper.Watermark="Podaj e-mail.."
+                Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
+
+            <TextBlock Grid.Row="2" Text="Hasło" />
+            <PasswordBox
+                Grid.Row="3"
+                Margin="3"
+                VerticalAlignment="Center"
+                ctrl:PasswordBoxBindingBehavior.Password="{Binding Haslo, UpdateSourceTrigger=PropertyChanged}"
+                ctrl:TextBoxHelper.ClearTextButton="True"
+                ctrl:TextBoxHelper.Watermark="Podaj hasło.." />
+
+            <StackPanel Grid.Row="4" Orientation="Horizontal">
+                <TextBlock Text="Nie masz jeszcze konta?" />
+                <TextBlock>
+                    <Hyperlink Command="{Binding RejestracjaWidokCommand}" CommandParameter="{Binding ElementName=mainWindow}">Zarejestruj się</Hyperlink>
+                </TextBlock>
+            </StackPanel>
+            <Button
+                Grid.Row="5"
+                Margin="0,20,0,0"
+                Command="{Binding LogowanieWidokCommand}"
+                CommandParameter="{Binding ElementName=mainWindow}"
+                Content="Zaloguj się" />
+        </Grid>
+
+        <Grid
+            Grid.Row="2"
+            Grid.Column="1"
+            VerticalAlignment="Center"
+            Visibility="{Binding PokazGridRejestracji, UpdateSourceTrigger=PropertyChanged}">
+
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Text="E-mail" />
+                        <TextBox
+                            Grid.Row="1"
+                            ctrl:TextBoxHelper.ClearTextButton="True"
+                            ctrl:TextBoxHelper.Watermark="Podaj e-mail.."
+                            Text="{Binding RejestracjaVM.Email, UpdateSourceTrigger=PropertyChanged}" />
+
+                        <TextBlock Grid.Row="2" Text="Imię" />
+                        <TextBox
+                            Grid.Row="3"
+                            ctrl:TextBoxHelper.ClearTextButton="True"
+                            ctrl:TextBoxHelper.Watermark="Podaj imię.."
+                            Text="{Binding RejestracjaVM.Imie, UpdateSourceTrigger=PropertyChanged}" />
+
+                        <TextBlock Grid.Row="4" Text="Nazwisko" />
+                        <TextBox
+                            Grid.Row="5"
+                            ctrl:TextBoxHelper.ClearTextButton="True"
+                            ctrl:TextBoxHelper.Watermark="Podaj nazwisko.."
+                            Text="{Binding RejestracjaVM.Nazwisko, UpdateSourceTrigger=PropertyChanged}" />
+
+                        <TextBlock Grid.Row="6" Text="Wiek" />
+                        <ctrl:NumericUpDown
+                            Grid.Row="7"
+                            ctrl:TextBoxHelper.Watermark="Podaj wiek.."
+                            Maximum="150"
+                            Minimum="1"
+                            Value="{Binding RejestracjaVM.Wiek, UpdateSourceTrigger=PropertyChanged}" />
+
+                        <TextBlock Grid.Row="8" Text="Płeć" />
+                        <ComboBox
+                            Grid.Row="9"
+                            ctrl:TextBoxHelper.ClearTextButton="True"
+                            ctrl:TextBoxHelper.Watermark="Wybierz płeć.."
+                            ItemsSource="{Binding RejestracjaVM.Plcie}"
+                            SelectedItem="{Binding RejestracjaVM.Plec}" />
+
+                        <TextBlock Grid.Row="10" Text="Hasło" />
+                        <PasswordBox
+                            Grid.Row="11"
+                            ctrl:PasswordBoxBindingBehavior.Password="{Binding RejestracjaVM.Haslo, UpdateSourceTrigger=PropertyChanged}"
+                            ctrl:TextBoxHelper.ClearTextButton="True"
+                            ctrl:TextBoxHelper.Watermark="Podaj hasło.." />
+
+                        <TextBlock Grid.Row="12" Text="Powtórz hasło" />
+                        <PasswordBox
+                            Grid.Row="13"
+                            ctrl:PasswordBoxBindingBehavior.Password="{Binding RejestracjaVM.PowtorzHaslo, UpdateSourceTrigger=PropertyChanged}"
+                            ctrl:TextBoxHelper.ClearTextButton="True"
+                            ctrl:TextBoxHelper.Watermark="Podaj hasło ponownie.." />
+                    </Grid>
+
+                </ScrollViewer>
+                <StackPanel
+                    Grid.Row="1"
+                    Margin="0,10,0,3"
+                    HorizontalAlignment="Center"
+                    Orientation="Horizontal">
+                    <Button Command="{Binding RejestracjaCommand}" Content="Zarejestruj się" />
+                    <Button
+                        Grid.Row="1"
+                        Command="{Binding PowrotDoLogowaniaCommand}"
+                        Content="Powrót" />
+                </StackPanel>
+            </Grid>
+        </Grid>
+    </Grid>
 </ctrl:MetroWindow>
