--- a/App.xaml
+++ b/App.xaml
@@ -2,6 +2,7 @@
     x:Class="BadanieKrwi.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ctrl="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:local="clr-namespace:BadanieKrwi"
     StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
@@ -11,6 +12,40 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="{x:Type ctrl:MetroWindow}">
+                <Setter Property="GlowBrush" Value="Black" />
+                <Setter Property="ResizeMode" Value="CanResizeWithGrip" />
+                <Setter Property="WindowTransitionsEnabled" Value="False" />
+            </Style>
+
+            <Style BasedOn="{StaticResource MahApps.Styles.Button}" TargetType="{x:Type Button}">
+                <Setter Property="FontWeight" Value="DemiBold" />
+                <Setter Property="Margin" Value="3" />
+                <Setter Property="MinWidth" Value="100" />
+                <Setter Property="Width" Value="100" />
+            </Style>
+
+            <Style BasedOn="{StaticResource MahApps.Styles.TextBlock}" TargetType="{x:Type TextBlock}">
+                <Setter Property="Margin" Value="3" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+
+            <Style BasedOn="{StaticResource MahApps.Styles.TextBox}" TargetType="{x:Type TextBox}">
+                <Setter Property="Margin" Value="3" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+
+            <Style TargetType="{x:Type ctrl:NumericUpDown}">
+                <Setter Property="Margin" Value="3" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+
+            <Style BasedOn="{StaticResource MahApps.Styles.PasswordBox}" TargetType="{x:Type PasswordBox}">
+                <Setter Property="Margin" Value="3" />
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
         </ResourceDictionary>
+
     </Application.Resources>
 </Application>
