--- a/Views/KlinikiOkno.xaml
+++ b/Views/KlinikiOkno.xaml
@@ -9,6 +9,7 @@
     Title="KlinikiOkno"
     Width="800"
     Height="450"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid />
 </ctrl:MetroWindow>
