--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -52,6 +52,7 @@
             x:Name="gridLogowania"
             Grid.Row="2"
             Grid.Column="1"
+            Margin="0,0,20,0"
             VerticalAlignment="Center"
             Visibility="{Binding PokazGridLogowania, UpdateSourceTrigger=PropertyChanged}">
             <Grid.RowDefinitions>
@@ -96,6 +97,7 @@
         <Grid
             Grid.Row="2"
             Grid.Column="1"
+            Margin="0,0,20,0"
             VerticalAlignment="Center"
             Visibility="{Binding PokazGridRejestracji, UpdateSourceTrigger=PropertyChanged}">
 
