- przeprojektowanie TwojeBadaniaOkno - zmiana nazwy z TwojeBadanieOkno na TwojeBadniaOkno - mała zmiana w KalendarzBadan - zmiana koloru GlowBrush okien na MahApps.Brushes.Accent

--- a/App.xaml
+++ b/App.xaml
@@ -14,7 +14,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="{x:Type ctrl:MetroWindow}">
-                <Setter Property="GlowBrush" Value="Black" />
+                <Setter Property="GlowBrush" Value="{DynamicResource MahApps.Brushes.Accent}" />
                 <Setter Property="ResizeMode" Value="CanResizeWithGrip" />
                 <Setter Property="WindowTransitionsEnabled" Value="False" />
             </Style>
