--- a/Views/KlinikiOkno.xaml
+++ b/Views/KlinikiOkno.xaml
@@ -4,12 +4,120 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:ctrl="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     xmlns:local="clr-namespace:BadanieKrwi.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="KlinikiOkno"
-    Width="800"
-    Height="450"
+    xmlns:vm="clr-namespace:BadanieKrwi.ViewModels"
+    x:Name="kliniki"
+    Title="Badanie Krwi - Kliniki"
+    Width="600"
+    Height="400"
+    dialog:DialogParticipation.Register="{Binding}"
+    ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
-    <Grid />
+    <ctrl:MetroWindow.DataContext>
+        <vm:KlinikiViewModel />
+    </ctrl:MetroWindow.DataContext>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <TextBlock
+            Grid.ColumnSpan="2"
+            Style="{StaticResource topTextBlock30}"
+            Text="Twoje Kliniki" />
+        <TextBlock
+            Grid.Row="1"
+            Margin="6,3,3,3"
+            Text="Wybór Kliniki" />
+
+        <ComboBox
+            Grid.Row="1"
+            Grid.Column="1"
+            Margin="8,3,3,3"
+            DisplayMemberPath="NazwaITelefon"
+            ItemsSource="{Binding Kliniki}"
+            SelectedItem="{Binding WybranaKlinika}" />
+
+        <GroupBox Grid.Row="2" Grid.ColumnSpan="2">
+            <GroupBox.Header>
+                <TextBlock FontWeight="Bold" Text="Szczegóły" />
+            </GroupBox.Header>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100" />
+                    <ColumnDefinition Width="*" />
+
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <TextBlock Text="Nazwa:" />
+                <TextBox
+                    Grid.Column="1"
+                    ctrl:TextBoxHelper.ClearTextButton="True"
+                    ctrl:TextBoxHelper.Watermark="Podaj nazwę.."
+                    Text="{Binding NowaKlinika.Nazwa, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock Grid.Row="1" Text="Adres:" />
+                <TextBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    ctrl:TextBoxHelper.ClearTextButton="True"
+                    ctrl:TextBoxHelper.Watermark="Podaj adres.."
+                    Text="{Binding NowaKlinika.Adres, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock Grid.Row="2" Text="Numer telefonu:" />
+                <TextBox
+                    Grid.Row="2"
+                    Grid.Column=" 1"
+                    ctrl:TextBoxHelper.ClearTextButton="True"
+                    ctrl:TextBoxHelper.Watermark="Podaj numer telefonu.."
+                    Text="{Binding NowaKlinika.Telefon, UpdateSourceTrigger=PropertyChanged}" />
+
+                <TextBlock
+                    Grid.Row="3"
+                    VerticalAlignment="Top"
+                    Text="Informacja:" />
+                <TextBox
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    VerticalAlignment="Stretch"
+                    ctrl:TextBoxHelper.ClearTextButton="True"
+                    ctrl:TextBoxHelper.Watermark="Podaj dodatkowe informacje.."
+                    AcceptsReturn="True"
+                    AcceptsTab="True"
+                    Text="{Binding NowaKlinika.Informacja, UpdateSourceTrigger=PropertyChanged}" />
+
+            </Grid>
+        </GroupBox>
+
+        <StackPanel
+            Grid.Row="3"
+            Grid.ColumnSpan="2"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <Button Command="{Binding NowyCommand}" Content="Nowy" />
+            <Button
+                Command="{Binding ZapiszCommand}"
+                CommandParameter="{Binding ElementName=kliniki}"
+                Content="Zapisz" />
+            <Button
+                Command="{Binding WrocCommand}"
+                CommandParameter="{Binding ElementName=kliniki}"
+                Content="Wróć" />
+        </StackPanel>
+    </Grid>
 </ctrl:MetroWindow>
